@@ -11,10 +11,12 @@ export(arrows3d)
 export(cone3d)
 export(power_method)
 export(regvec3d)
+export(showEig)
 export(vectors3d)
 exportPattern("^[[:alpha:]]+")
 import(rgl)
 import(stats)
+importFrom(car,dataEllipse)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
 importFrom(graphics,lines)
