@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/Proj.R
+% Please edit documentation in R/proj.R
 \name{Proj}
 \alias{Proj}
 \title{Projection of Vector y on columns of X}
