@@ -4,6 +4,7 @@ matlib 0.7.3
 - Added a draw argument to `vectors3d()` and `arrows3d()`, which defaults to TRUE. If FALSE, just returns
   returns the "reg.length" to help in scaling.
 - Small cosmetic changes to regvec3d().
+- Added a `showEig` function to draw eigenvectors superimposed on a dataEllipse [MF]
 
 matlib 0.7.2
 
